@@ -1,6 +1,8 @@
 === ongoing ===
 
 - Bugfix: next_month calculation was faulty
+- Bugfix: Making timezone aware row values naive
+- Showing whole year on year view, even future months
 
 === 0.1.4 ===
 
